--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,13 +1,6 @@
 ---
-- name: copy trib.rb
-  copy:
-    src: src/src/redis-trib.rb
-    dest: /redis
-    remote_src: yes
-- name: start redis cluster
-  command: "ruby redis-trib.rb create --replicas 1 {{redis_node[0]}}:6379 {{redis_node[0]}}:6380 {{redis_node[1]}}:6379 {{redis_node[1]}}:6380 {{redis_node[2]}}:6379 {{redis_node[2]}}:6380" 
-  args:
-    chdir: /redis 
+- include copy-trib.yml
+- include start-redis-cluster.yml
 
 
 
